# download-manager

./: .gitignore  .prettierignore  .prettierrc.cjs  Cargo.toml  FEATURES.md  Justfile  README.md  TODO.md  implementation.md
.claude/: settings.local.json
.github/workflows/: gh-pages.yml  mdbook.yml
book/: book.toml
book/src/: SUMMARY.md  chapter_1.md  chapter_2.md  chapter_3.md  chapter_4.md  chapter_5.md  chapter_6.md  index.md
src/: cli.rs  main.rs
src/download/: async_download.rs  async_range.rs  blocking.rs  mod.rs  progress.rs  utils.rs
the-dl-book/: ADMONITIONS.md  README.md  book.toml
the-dl-book/src/: SUMMARY.md  chapter_1.md  chapter_2.md  chapter_3.md  chapter_4.md  chapter_5.md  chapter_6.md  chapter_7.md  index.md  meet_mack.md
the-dl-book/theme/: custom.css
