[package]
name = "download-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
ctrlc = { version = "3.5.1", features = ["termination"] }
hex = "0.4.3"
indicatif = "0.18.2"
reqwest = { version = "0.12.24", features = ["blocking"]}
sha2 = "0.10.9"

[[bin]]
name = "dlm"
path = "src/main.rs"
