[package]
name = "download-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
colored = "3.0.0"
ctrlc = { version = "3.5.1", features = ["termination"] }
futures = "0.3.31"
hex = "0.4.3"
indicatif = "0.18.2"
reqwest = { version = "0.12.24", features = ["blocking", "stream"] }
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"

[[bin]]
name = "dlm"
path = "src/main.rs"
